@@ -312,6 +312,26 @@ void nimArr_2_ManyModelAccess(ManyVariablesMapAccessor &MMVAPtr, NimArrBase<T> &
     PRINTF("Warning: after completing nimArr_2_ManyModelAccess, nimCurrent != nimEnd. Perhaps the NimArr was longer than the accessor?\n");
 }
 
+template<class T>
+void nimArr_2_ManyModelAccessIndex(ManyVariablesMapAccessor &MMVAPtr, NimArrBase<T> &nimArr, int index){
+  vector<SingleVariableMapAccessBase*> SMVA_Vec = MMVAPtr.getMapAccessVector();
+  int nimCurrent = 0;
+  int nimEnd = nimArr.size();
+  int nimArrStride = nimArr.strides()[0];
+  int nimCurrentOffset = nimArr.getOffset();
+  int k = SMVA_Vec.size();
+  int nextNumVals;
+  SingleVariableMapAccessBase* curSingleAccess;
+  curSingleAccess = SMVA_Vec[index];
+  nextNumVals = (*curSingleAccess).getLength();
+  if(nextNumVals + nimCurrent > nimEnd)
+    PRINTF("Warning: in nimArr_2_ManyModelAccessIndex, accessor larger than NimArr!\n");
+  nimArr_2_SingleModelAccess<T>(curSingleAccess, nimArr, nimCurrentOffset, nimArrStride);
+  nimCurrent += nextNumVals;
+  if(nimCurrent != nimEnd)
+    PRINTF("Warning: after completing nimArr_2_ManyModelAccessIndex, nimCurrent != nimEnd. Perhaps the NimArr was longer than the accessor?\n");
+}
+  
 ///////////////
 // [accessors]_2_nimArr
 // nimArr is "to". SMVAPtr is "from"
@@ -377,7 +397,7 @@ void ManyModelAccess_2_nimArr(ManyVariablesMapAccessor &MMVAPtr, NimArrBase<T> &
 }
 
 template<class T>
-void ManyModelAccessIndex_2_nimArr(ManyVariablesMapAccessor &MMVAPtr, NimArrBase<T> &nimArr, int i) {
+void ManyModelAccessIndex_2_nimArr(ManyVariablesMapAccessor &MMVAPtr, NimArrBase<T> &nimArr, int index) {
   vector<SingleVariableMapAccessBase*> SMVA_Vec = MMVAPtr.getMapAccessVector();
   int nimCurrent = 0;
   int nimEnd = nimArr.size();
@@ -385,22 +405,7 @@ void ManyModelAccessIndex_2_nimArr(ManyVariablesMapAccessor &MMVAPtr, NimArrBase
   int nimCurrentOffset = nimArr.getOffset();
   int nextNumVals;
   SingleVariableMapAccessBase* curSingleAccess;
-    /*  i -= 1;  // adjust to C indexing
-  if(i > 0) {
-    for(int ii = 0; ii < i; ii++) {
-      curSingleAccess = SMVA_Vec[ii];
-      nextNumVals = (*curSingleAccess).getLength();
-      if(nextNumVals + nimCurrent > nimEnd){
-        PRINTF("Warning: in ManyModelAccessIndex_2_nimArr as looping, accessor larger than NimArr!\n");
-        break;
-      }
-      nimCurrent += nextNumVals;
-      nimCurrentOffset += nextNumVals * nimArrStride;
-    }
-  }
-  PRINTF("i is %i, offset is %f, stride is %f, end is %i", i, nimCurrentOffset, nimArrStride, nimEnd);
-    */
-  curSingleAccess = SMVA_Vec[i];
+  curSingleAccess = SMVA_Vec[index];
   nextNumVals = (*curSingleAccess).getLength();
   if(nextNumVals + nimCurrent > nimEnd)
     PRINTF("Warning: in ManyModelAccessIndex_2_nimArr, accessor larger than NimArr!\n");
@@ -419,6 +424,14 @@ void setValues(NimArrBase<int> &nimArr, ManyVariablesMapAccessor &MVA){
 	nimArr_2_ManyModelAccess<int>(MVA, nimArr);
 }
 
+void setValues(NimArrBase<double> &nimArr, ManyVariablesMapAccessor &MVA, int index){
+  nimArr_2_ManyModelAccessIndex<double>(MVA, nimArr, index-1);
+}
+
+void setValues(NimArrBase<int> &nimArr, ManyVariablesMapAccessor &MVA, int index){
+  nimArr_2_ManyModelAccessIndex<int>(MVA, nimArr, index-1);
+}
+
 void getValues(NimArr<1, double> &nimArr, ManyVariablesMapAccessor &MVA){
 	ManyModelAccess_2_nimArr<double>(MVA, nimArr);
 }
@@ -426,12 +439,12 @@ void getValues(NimArr<1, int> &nimArr, ManyVariablesMapAccessor &MVA){
 	ManyModelAccess_2_nimArr<int>(MVA, nimArr);
 }
 
-void getValues(NimArr<1, double> &nimArr, ManyVariablesMapAccessor &MVA, int i){
-  ManyModelAccessIndex_2_nimArr<double>(MVA, nimArr, i-1);
+void getValues(NimArr<1, double> &nimArr, ManyVariablesMapAccessor &MVA, int index){
+  ManyModelAccessIndex_2_nimArr<double>(MVA, nimArr, index-1);
   } 
 
-void getValues(NimArr<1, int> &nimArr, ManyVariablesMapAccessor &MVA, int i){
-  ManyModelAccessIndex_2_nimArr<int>(MVA, nimArr, i-1);
+void getValues(NimArr<1, int> &nimArr, ManyVariablesMapAccessor &MVA, int index){
+  ManyModelAccessIndex_2_nimArr<int>(MVA, nimArr, index-1);
 }
 
 ////////////////////////
@@ -532,28 +545,6 @@ void ManyModelAccess_2_nimArr(ManyVariablesAccessor &MMVAPtr, NimArr<D, T> &nimA
     PRINTF("Warning: after completing ManyModelAccess_2_nimArr, nimCurrent != nimEnd. Perhaps the NimArr was longer than the accessor?\n");
 }
 
-/*
-template<int D, class T>
-void ManyModelAccess_2_nimArr(ManyVariablesAccessor &MMVAPtr, NimArr<D, T> &nimArr, int i) {
-  vector<SingleVariableAccessBase*> SMVA_Vec = MMVAPtr.getAccessVector();
-  int nimCurrent = 0;
-  int nimEnd = nimArr.size();
-  int nextNumVals;
-  SingleVariableAccessBase* curSingleAccess;
-  
-  curSingleAccess = SMVA_Vec[i];
-  nextNumVals = (*curSingleAccess).getLength();
-  if(nextNumVals + nimCurrent > nimEnd){
-    PRINTF("Warning: in ManyModelAccess_2_nimArr, accessor larger than NimArr!\n");
-  }
-  SingleModelAccess_2_nimArr<D, T>(curSingleAccess, nimArr, nimCurrent);
-  nimCurrent = nimCurrent + nextNumVals;
-  
-  if(nimCurrent != nimEnd)
-    PRINTF("Warning: after completing ManyModelAccess_2_nimArr, nimCurrent != nimEnd. Perhaps the NimArr was longer than the accessor?\n");
-}
-*/
-
 void setValues(NimArrBase<double> &nimArr, ManyVariablesAccessor &MVA){
 	nimArr_2_ManyModelAccess<double>(MVA, nimArr);
 }
@@ -567,14 +558,7 @@ void getValues(NimArr<1, double> &nimArr, ManyVariablesAccessor &MVA){
 void getValues(NimArr<1, int> &nimArr, ManyVariablesAccessor &MVA){
 	ManyModelAccess_2_nimArr<1, int>(MVA, nimArr);
 }
-/*
-void getValues(NimArr<1, double> &nimArr, ManyVariablesAccessor &MVA, int i){
-  ManyModelAccess_2_nimArr<1, double>(MVA, nimArr, i);
-}
-void getValues(NimArr<1, int> &nimArr, ManyVariablesAccessor &MVA, int i){
-  ManyModelAccess_2_nimArr<1, int>(MVA, nimArr, i);
-}
-*/
+
 
 // new copierClass versions
 // remember to look at calculate() too to avoid copies every time.
