@@ -4,6 +4,8 @@ USER LEVEL CHANGES
 
 -- Updates to MCMC configuration API.  Member methods conf$addMonitors() and conf$addMonitors2() now accept argument ..., allowing multiple monitors to be added using the syntax conf$addMonitors('x', 'y', 'z').  Introduced a new member method, conf$printMonitors(), which nicely prints the current MCMC monitors.  This takes the place of the former method conf$getMonitors().  Now, conf$getMonitors() returns a character vector of the MCMC monitors, and the new method conf$getMonitors2() returns a character vector of the MCMC monitors2 field.
 
+-- Indexing of values() now allowed in the DSL, so syntax such as `x <- model$values(nodes[i])` or `values(model, nodes[i]) <- x` is supported.
+
 -- New sampling algorithm (RW_dirichlet) added to MCMC engine, for sampling non-conjugate Dirichlet distributions.
 
 -- Fixed bug preventing use of round() in DSL and BUGS code.
